[gd_scene load_steps=5 format=3 uid="uid://biyss32vn7c7b"]

[ext_resource type="Script" path="res://bullet.gd" id="1_fqhhc"]
[ext_resource type="Texture2D" uid="uid://c5wkxdtopwvf5" path="res://pixil-frame-0.png" id="1_mu2ik"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_05ny8"]
radius = 2.99997
height = 11.9999

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ilg6e"]
radius = 2.99995
height = 13.9998

[node name="Bullet" type="CharacterBody2D"]
script = ExtResource("1_fqhhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(12, -3)
scale = Vector2(1.02875, 0.75)
texture = ExtResource("1_mu2ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 1.86287e-09)
rotation = 1.57547
shape = SubResource("CapsuleShape2D_05ny8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 0)
rotation = -1.57673
shape = SubResource("CapsuleShape2D_ilg6e")

[node name="Life" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Life 2" type="Timer" parent="."]
wait_time = 0.07

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Life" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Life 2" to="." method="_on_life_2_timeout"]
